# ArchitectureRefactoringHelper/Repository/swagger.json
@@ -2617,6 +2617,74 @@
         }
       }
     },
+    "/api/v1/projects/scenarios/{id}/qualities": {
+      "get": {
+        "tags": [
+          "Scenario"
+        ],
+        "operationId": "GetQualities",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Scenario"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/projects/scenarios/{id}/qualitysublevels": {
+      "get": {
+        "tags": [
+          "Scenario"
+        ],
+        "operationId": "GetQualitySublevels",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Scenario"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/projects/scenarios/{id}": {
       "get": {
         "tags": [
